# torch-ccl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  ProcessGroupCCL.cpp  ProcessGroupCCL.hpp  README  README.md  requirements.txt  setup.py  third-party-programs.txt  version.txt
cmake/Modules/: FindoneCCL.cmake
demo/: README.md  demo.py
examples/: example.py  profiling.py  sparse_allreduce.py  subgroups.py
oneccl_bindings_for_pytorch/: __init__.py
oneccl_bindings_for_pytorch/csrc/: _C.cpp  init.cpp
patches/: Fix_the_configure_file_issue_in_oneCCL.patch  Fix_the_link_path_issue_in_oneCCL.patch  Update_Internal_oneCCL.patch  Update_oneCCL.patch  enable_torch_ccl_for_pytorch1.5.0-rc3.diff  oneCCL.patch  unlink_torchlib.patch
src/: CMakeLists.txt  ProcessGroupCCL.cpp  ProcessGroupCCL.hpp  ccl_comm_collector.cpp  ccl_comm_collector.h  dispatch_stub.cpp  dispatch_stub.h  env.cpp  env.h  init.cpp  init.h  utils.cpp  utils.h
src/cpu/: ccl_cpu.h  cpu_ccl.cpp
src/gpu/: CMakeLists.txt  Makefile  README.md  allreduce.cpp  allreduce.h  allreduce_small.h  dpcpp_ccl.cpp  runtime.hpp
src/test/remotesync/: simple_test.cpp
src/test/segfault/: Makefile  simple_test.cpp  test.sh  ze_exception.hpp
src/test/writeremote/: simple_test.cpp  sycl_misc.hpp  test.sh
test/: CMakeLists.txt  ProcessGroupCCLTest.cpp  simple_test.py  simple_test_sg.py
tests/: CMakeLists.txt  ProcessGroupCCLTest.cpp  README.md  ddp_allreduce.py  ds_p2p_crossnodes.py  ds_subgroup_allreduce.py  run_ds_llm.sh  test_allreduce.py  test_barrier.py  test_c10d_ccl.py  test_c10d_ccl_bf16.py  test_c10d_p2p.py  test_fsdp.py  test_llm_allreduce.py  test_p2p_crossnodes.py
tests/DeepSpeed_test/: DeepSpeed.csv  Example.csv  testccl_cpu.py  testccl_gpu.py  testccl_gpu_mpi.py
tools/setup/: __init__.py  cmake.py  env.py
torch_ccl/: __init__.py
torch_ccl/csrc/: _C.cpp  init.cpp
